--- a/HTML/Tasks.html
+++ b/HTML/Tasks.html
@@ -13,8 +13,8 @@
     <a href="../index.html">Hjem</a>
     <a class="active" href="Tasks.html">Tasks</a>
     <a href="../HTML/Tabeller.html">Undersøkelsen</a>
-    <a href="#naturfag">Naturfag</a>
-    <a href="#produksjon">Produksjon</a>
+    <a href="../HTML/Naturfag.html">Naturfag</a>
+    <a href="../HTML/Produksjon.html">Produksjon</a>
   </div>
 </div>
 </header>
@@ -34,6 +34,7 @@
    Om du vil fjerne en task kan du klikke på den tasken du vil fjerne. <br>
    (Det skal komme en rød strek over den taksen du hovrer over)
   </p>
+  
 </div>
 
 
