--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <a class="active" href="index.html">Hjem</a>
       <a href="HTML/Tasks.html">Tasks</a>
       <a href="HTML/Tabeller.html">Undersøkelsen</a>
-      <a href="#naturfag">Naturfag</a>
-      <a href="#produksjon">Produksjon</a>
+      <a href="HTML/Naturfag.html">Naturfag</a>
+      <a href="HTML/Produksjon.html">Produksjon</a>
     </div>
   </div>
   </header>
