--- a/HTML/Naturfag.html
+++ b/HTML/Naturfag.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Naturfag</title>
     <link rel="stylesheet" href="../CSS/style.css">
 </head>
 <body>
@@ -12,16 +12,16 @@
       <a href="../index.html" class="logo">PANT ALT PANT NÅ</a>
       <div class="header-right">
         <a href="../index.html">Hjem</a>
-        <a class="active" href="Tasks.html">Tasks</a>
+        <a href="Tasks.html">Tasks</a>
         <a href="../HTML/Tabeller.html">Undersøkelsen</a>
-        <a href="#naturfag">Naturfag</a>
-        <a href="#produksjon">Produksjon</a>
+        <a class="active" href="../HTML/Naturfag.html">Naturfag</a>
+        <a href="../HTML/Produksjon.html">Produksjon</a>
       </div>
     </div>
     </header>
     
-    <div class="blue-bg2" alt="https://www.folkebladet.no/nyheter/i/8JXmvA/en-butikk-troner-alene-paa-pante-toppen-i-midt-troms"></div>
-    <div class="white-bg"></div>
+    <div class="blue-bg4" alt="https://www.folkebladet.no/nyheter/i/8JXmvA/en-butikk-troner-alene-paa-pante-toppen-i-midt-troms"></div>
+    <div class="white-bg4"></div>
 
 <div class="content">
     <h1>Funksjoner til næringsstoffer og hvorfor et variert kosthold er viktig</h1>
