--- a/HTML/Tabeller.html
+++ b/HTML/Tabeller.html
@@ -14,14 +14,14 @@
         <a href="../index.html">Hjem</a>
         <a href="../HTML/Tasks.html">Tasks</a>
         <a class="active" href="../HTML/Tabeller.html">Undersøkelsen</a>
-        <a href="#naturfag">Naturfag</a>  
-        <a href="#produksjon">Produksjon</a>
+        <a href="../HTML/Naturfag.html">Naturfag</a>  
+        <a href="../HTML/Produksjon.html">Produksjon</a>
       </div>
     </div>
     </header>
   
-    <div class="blue-bg"></div>
-  <div class="white-bg"></div>
+    <div class="blue-bg3"></div>
+  <div class="white-bg3"></div>
   
 <div class="content">
     <h1>Undersøkelsen</h1>
